--- a/Demos/04-Data-Access/02-REST/rest-node-ts/index.html
+++ b/Demos/04-Data-Access/02-REST/rest-node-ts/index.html
@@ -47,8 +47,7 @@
                 </pre>
             </div>
           </div></div>
-     
- 
-</ul>
+          </body>
+        </div>
 </body>
 </html>
